objects/project_cloud__Minute__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Agenda_Item__c</fullName>
        <inlineHelpText>This field shows what Agenda Item this Meeting Minute is related too.</inlineHelpText>
        <label>Agenda Item</label>
        <referenceTo>project_cloud__Agenda_Item__c</referenceTo>
        <relationshipLabel>Minutes</relationshipLabel>
        <relationshipName>Minutes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Content__c</fullName>
        <inlineHelpText>This field allows users to add content to the Meeting Minute.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Editor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will show what user is Editing the Meeting Minute.</inlineHelpText>
        <label>Editor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Formatted_Content__c</fullName>
        <inlineHelpText>This field allows users to add content to the Meeting Minute.</inlineHelpText>
        <label>Formatted Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For internal use only.  Defines whether or not the record is a draft and allows tracking for editing across multiple clients (incorrect use of this field may result in deletion of a record).</description>
        <inlineHelpText>This field should remain a &apos;Read Only&apos; field. Defines whether or not the record is a draft and allows tracking for editing across multiple clients (incorrect use of this field may result in deletion of a record).</inlineHelpText>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <label>Minute</label>
    <nameField>
        <displayFormat>MIN-{00000000}</displayFormat>
        <label>Minute Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minutes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>